# tinkoff21-22

./: CMakeLists.txt
assets/: mosh_a0ans.txt  mosh_a1.txt  mosh_b0ans.txt  mosh_c0.txt  mosh_c0ans.txt  mosh_c1.txt  mosh_c2.txt
assets/test_ans/: mosh_a1_ans.txt  mosh_a2_ans2.txt  mosh_b1_ans.txt  mosh_b2_ans.txt
data-structures/: segtree-range-affine-range-add.cpp  sparse-table.cpp
distours/tour11/: A_dt11.cpp  Adumb_dt15.cpp  genA.py
distours/tour15/: A_dt15.cpp  B_dt15.cpp  D_dt15.cpp
lesson10-graphs1/: A10.cpp  D10.cpp
lesson11-strings2/: B11.cpp
lesson12-centroid/: E12.cpp
lesson13-math1/: B13.cpp  C13.cpp  E13.cpp  G13.cpp  J13.cpp
lesson2-scanline/: A2.cpp  A2_scanline.cpp  B2.cpp  C2.cpp  D2-segtree.cpp  D2.cpp
lesson21-annealing/: B21.cpp  B21_final.cpp  good.txt
lesson3-geometry1/: B3.cpp  C3.cpp  D3.cpp
lesson4-wrong/: problem_A.cpp  problem_B.cpp  problem_C.cpp  problem_D.cpp  problem_E.cpp  problem_F.cpp  problem_G.cpp
lesson5-struct2/: E5.cpp
lesson6-dp_opt/: C6.cpp
lesson8-lca_rmq/: A8.cpp  A8_stress.cpp  B8.cpp  C8.cpp  gen_A8.py
lesson9-testing/: A9.cpp  B9.cpp  C9.cpp  D9.cpp  gen_A9.py  gen_B9.py  gen_C9.py  gen_D9.py  gen_D9_max.py  test1.txt
lesson9-testing/bad/: a  b  c
lesson9-testing/tests1/: 001.ans
lesson9-testing/tests4/: 005.ans  006.ans  007.ans  008.ans  009.ans
lesson9-testing/validators/: a_validator.cpp  b_validator.cpp  c_validator.cpp  d_validator.cpp
olympiads/hse-vp-kval/: A_hse-kv.cpp  B_hse-kv.cpp  C_hse-kv.cpp
olympiads/ioip-final/: A_gen.py  A_iofi.cpp  Ad_lofi.cpp  B_iofi.cpp  C_iofi.cpp  D_iofi.cpp  E_iofi.cpp  input.txt
olympiads/ioip-kval/: A_iokv.cpp  Adumb_iokv.cpp  B_iokv.cpp  C_iokv.cpp  D_iokv.cpp  genA.py
olympiads/mosh-kval/: A_moshkv.cpp  B_moshkv.cpp  C_moshkv.cpp  D_moshkv.cpp  E_moshkv.cpp  С_brute.py
olympiads/mosh2021/: A_mosh21.cpp
olympiads/msu-kval/: A_msu.cpp  C_msu.cpp  D_msu.cpp  E_msu.cpp  F_msu.cpp
olympiads/reg-tour12/: A_reg12.cpp  B_reg12.cpp  C_reg12.cpp
olympiads/sirius-primes/: Asirpr.cpp
olympiads/sort-me4/: A_sort4.cpp  B_sort4.cpp  C_sort4.cpp  D_sort4.cpp
olympiads/spbu-final/: A_spbf.cpp  Aps_spbf.cpp  B_spbf.cpp  C_spbf.cpp  D_spbf.cpp  Edumb_spbf.cpp  testC.py
olympiads/spbu-kval/: B_spb1.cpp  D_spbu1.cpp  G_spb1.cpp  J_spb1.cpp  Jd_spb1.cpp
olympiads/technocup-kval1/: A_tck1.cpp  G_tck1.cpp
olympiads/technocup-kval2/: A_tck2.cpp  B_tck2.cpp  C_tck2.cpp  D_tck2.cpp
olympiads/vsesib-kval/: Avsk.cpp  Bvsk.cpp  Cvsk.cpp  Dvsk.cpp  Evsk.cpp
olympiads/vsosh-sch/: Avs-sch.cpp  Bvs-sch.cpp  Cvs-sch.cpp  Dvs-sch.cpp  Evs-sch.cpp
olympiads/zaoch-long/: A_zalo.cpp
pract-exam1/: A_ex1.cpp  C_ex1.cpp  E_ex1.cpp
randstuff/: coolsegtree.cpp  echo.cpp  echo_int.cpp  gen_echo.py  pbds_test.cpp  rand1.cpp  rand2.cpp  rand3.cpp
