cmake_minimum_required(VERSION 3.14)
project(tinkoff21-22)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic -Wfloat-equal -Wconversion -Wlogical-op -Wshift-overflow=2 -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC -DONPC")
add_executable(A2 lesson2-scanline/A2.cpp)
add_executable(C2 lesson2-scanline/C2.cpp)
add_executable(problem_A lesson4-wrong/problem_A.cpp)
add_executable(problem_B lesson4-wrong/problem_B.cpp)
add_executable(problem_C lesson4-wrong/problem_C.cpp)
add_executable(problem_D lesson4-wrong/problem_D.cpp)
add_executable(problem_E lesson4-wrong/problem_E.cpp)
add_executable(problem_F lesson4-wrong/problem_F.cpp)
add_executable(problem_G lesson4-wrong/problem_G.cpp)
add_executable(Avsk olympiads/vsesib-kval/Avsk.cpp)
add_executable(Bvsk olympiads/vsesib-kval/Bvsk.cpp)
add_executable(Cvsk olympiads/vsesib-kval/Cvsk.cpp)
add_executable(Dvsk olympiads/vsesib-kval/Dvsk.cpp)
add_executable(Evsk olympiads/vsesib-kval/Evsk.cpp)
add_executable(A_tck1 olympiads/technocup-kval1/A_tck1.cpp)
add_executable(G_tck1 olympiads/technocup-kval1/G_tck1.cpp)
add_executable(Avs-sch olympiads/vsosh-sch/Avs-sch.cpp)
add_executable(Bvs-sch olympiads/vsosh-sch/Bvs-sch.cpp)
add_executable(Cvs-sch olympiads/vsosh-sch/Cvs-sch.cpp)
add_executable(Dvs-sch olympiads/vsosh-sch/Dvs-sch.cpp)
add_executable(Evs-sch olympiads/vsosh-sch/Evs-sch.cpp)
add_executable(Asirpr olympiads/sirius-primes/Asirpr.cpp)
add_executable(segtree-range-affine-range-add data-structures/segtree-range-affine-range-add.cpp)
add_executable(A2_scanline lesson2-scanline/A2_scanline.cpp)
add_executable(B2 lesson2-scanline/B2.cpp)
add_executable(D2 lesson2-scanline/D2.cpp)
add_executable(D2-segtree lesson2-scanline/D2-segtree.cpp)