cmake_minimum_required(VERSION 3.14)
project(tinkoff21-22)

set(CMAKE_CXX_STANDARD 17)
#set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic -Wfloat-equal -Wconversion -Wlogical-op -Wshift-overflow=2 -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC -DONPC -fsanitize=address -fsanitize=undefined")
add_executable(A2 lesson2-scanline/A2.cpp)
add_executable(C2 lesson2-scanline/C2.cpp)
add_executable(problem_A lesson4-wrong/problem_A.cpp)
add_executable(problem_B lesson4-wrong/problem_B.cpp)
add_executable(problem_C lesson4-wrong/problem_C.cpp)
add_executable(problem_D lesson4-wrong/problem_D.cpp)
add_executable(problem_E lesson4-wrong/problem_E.cpp)
add_executable(problem_F lesson4-wrong/problem_F.cpp)
add_executable(problem_G lesson4-wrong/problem_G.cpp)
add_executable(Avsk olympiads/vsesib-kval/Avsk.cpp)
add_executable(Bvsk olympiads/vsesib-kval/Bvsk.cpp)
add_executable(Cvsk olympiads/vsesib-kval/Cvsk.cpp)
add_executable(Dvsk olympiads/vsesib-kval/Dvsk.cpp)
add_executable(Evsk olympiads/vsesib-kval/Evsk.cpp)
add_executable(A_tck1 olympiads/technocup-kval1/A_tck1.cpp)
add_executable(G_tck1 olympiads/technocup-kval1/G_tck1.cpp)
add_executable(Avs-sch olympiads/vsosh-sch/Avs-sch.cpp)
add_executable(Bvs-sch olympiads/vsosh-sch/Bvs-sch.cpp)
add_executable(Cvs-sch olympiads/vsosh-sch/Cvs-sch.cpp)
add_executable(Dvs-sch olympiads/vsosh-sch/Dvs-sch.cpp)
add_executable(Evs-sch olympiads/vsosh-sch/Evs-sch.cpp)
add_executable(Asirpr olympiads/sirius-primes/Asirpr.cpp)
add_executable(segtree-range-affine-range-add data-structures/segtree-range-affine-range-add.cpp)
add_executable(A2_scanline lesson2-scanline/A2_scanline.cpp)
add_executable(B2 lesson2-scanline/B2.cpp)
add_executable(D2 lesson2-scanline/D2.cpp)
add_executable(D2-segtree lesson2-scanline/D2-segtree.cpp)
add_executable(A_hse-kv olympiads/hse-vp-kval/A_hse-kv.cpp)
add_executable(B_hse-kv olympiads/hse-vp-kval/B_hse-kv.cpp)
add_executable(C_hse-kv olympiads/hse-vp-kval/C_hse-kv.cpp)
add_executable(A_tck2 olympiads/technocup-kval2/A_tck2.cpp)
add_executable(B_tck2 olympiads/technocup-kval2/B_tck2.cpp)
add_executable(C_tck2 olympiads/technocup-kval2/C_tck2.cpp)
add_executable(D_tck2 olympiads/technocup-kval2/D_tck2.cpp)
add_executable(A_zalo olympiads/zaoch-long/A_zalo.cpp)
add_executable(B13 lesson13-math1/B13.cpp)
add_executable(C13 lesson13-math1/C13.cpp)
add_executable(E13 lesson13-math1/E13.cpp)
add_executable(G13 lesson13-math1/G13.cpp)
add_executable(J13 lesson13-math1/J13.cpp)
add_executable(A9 lesson9-testing/A9.cpp)
add_executable(a_validator lesson9-testing/validators/a_validator.cpp)
add_executable(B9 lesson9-testing/B9.cpp)
add_executable(C9 lesson9-testing/C9.cpp)
add_executable(D9 lesson9-testing/D9.cpp)
add_executable(d_validator lesson9-testing/validators/d_validator.cpp)
add_executable(B3 lesson3-geometry1/B3.cpp)
add_executable(C3 lesson3-geometry1/C3.cpp)
add_executable(D3 lesson3-geometry1/D3.cpp)
add_executable(A10 lesson10-graphs1/A10.cpp)
add_executable(D10 lesson10-graphs1/D10.cpp)
add_executable(C8 lesson8-lca_rmq/C8.cpp)
add_executable(A8 lesson8-lca_rmq/A8.cpp)
add_executable(B8 lesson8-lca_rmq/B8.cpp)
add_executable(A8_stress lesson8-lca_rmq/A8_stress.cpp)
add_executable(B11 lesson11-strings2/B11.cpp)
add_executable(E5 lesson5-struct2/E5.cpp)
add_executable(C6 lesson6-dp_opt/C6.cpp)
add_executable(E12 lesson12-centroid/E12.cpp)
add_executable(A_ex1 pract-exam1/A_ex1.cpp)
add_executable(E_ex1 pract-exam1/E_ex1.cpp)
add_executable(C_ex1 pract-exam1/C_ex1.cpp)
add_executable(rand1 randstuff/rand1.cpp)
add_executable(B_spb1 olympiads/spbu-kval/B_spb1.cpp)
add_executable(Jd_spb1 olympiads/spbu-kval/Jd_spb1.cpp)
add_executable(J_spb1 olympiads/spbu-kval/J_spb1.cpp)
add_executable(G_spb1 olympiads/spbu-kval/G_spb1.cpp)
add_executable(D_spbu1 olympiads/spbu-kval/D_spbu1.cpp)
add_executable(sparse-table data-structures/sparse-table.cpp)
add_executable(A_reg12 olympiads/reg-tour12/A_reg12.cpp)
add_executable(B_reg12 olympiads/reg-tour12/B_reg12.cpp)
add_executable(C_reg12 olympiads/reg-tour12/C_reg12.cpp)
add_executable(rand2 randstuff/rand2.cpp)
add_executable(A_moshkv olympiads/mosh-kval/A_moshkv.cpp)
add_executable(B_moshkv olympiads/mosh-kval/B_moshkv.cpp)
add_executable(A_sort4 olympiads/sort-me4/A_sort4.cpp)
add_executable(B_sort4 olympiads/sort-me4/B_sort4.cpp)
add_executable(C_sort4 olympiads/sort-me4/C_sort4.cpp)
add_executable(D_sort4 olympiads/sort-me4/D_sort4.cpp)
add_executable(A_spbf olympiads/spbu-final/A_spbf.cpp)
add_executable(Aps_spbf olympiads/spbu-final/Aps_spbf.cpp)
add_executable(C_spbf olympiads/spbu-final/C_spbf.cpp)
add_executable(Edumb_spbf olympiads/spbu-final/Edumb_spbf.cpp)
add_executable(B_spbf olympiads/spbu-final/B_spbf.cpp)
add_executable(D_spbf olympiads/spbu-final/D_spbf.cpp)
add_executable(A_ioip-kv olympiads/ioip-kval/A_iokv.cpp)
add_executable(Adumb_iokv olympiads/ioip-kval/Adumb_iokv.cpp)
add_executable(B_iokv olympiads/ioip-kval/B_iokv.cpp)
add_executable(D_iokv olympiads/ioip-kval/D_iokv.cpp)
add_executable(C_iokv olympiads/ioip-kval/C_iokv.cpp)
add_executable(A_dt15 distours/tour15/A_dt15.cpp)
add_executable(B_dt15 distours/tour15/B_dt15.cpp)
add_executable(D_dt15 distours/tour15/D_dt15.cpp)
add_executable(D_moshkv olympiads/mosh-kval/D_moshkv.cpp)
add_executable(E_moshkv olympiads/mosh-kval/E_moshkv.cpp)
add_executable(C_moshkv olympiads/mosh-kval/C_moshkv.cpp)
add_executable(A_dt11 distours/tour11/A_dt11.cpp)
add_executable(Adumb_dt15 distours/tour11/Adumb_dt15.cpp)
add_executable(A_iofi olympiads/ioip-final/A_iofi.cpp)
add_executable(Ad_lofi olympiads/ioip-final/Ad_lofi.cpp)
add_executable(B_iofi olympiads/ioip-final/B_iofi.cpp)
add_executable(C_iofi olympiads/ioip-final/C_iofi.cpp)
add_executable(E_iofi olympiads/ioip-final/E_iofi.cpp)
add_executable(D_iofi olympiads/ioip-final/D_iofi.cpp)
add_executable(rand3 randstuff/rand3.cpp)
add_executable(pbds_test randstuff/pbds_test.cpp)
add_executable(echo randstuff/echo.cpp)
add_executable(echo_int randstuff/echo_int.cpp)
add_executable(B21 lesson21-annealing/B21.cpp)
add_executable(B21_final lesson21-annealing/B21_final.cpp)
add_executable(A_mosh21 olympiads/mosh2021/A_mosh21.cpp)
add_executable(coolsegtree randstuff/coolsegtree.cpp)
add_executable(A_msu olympiads/msu-kval/A_msu.cpp)
add_executable(C olympiads/msu-kval/C_msu.cpp)
add_executable(D_msu olympiads/msu-kval/D_msu.cpp)
add_executable(E_msu olympiads/msu-kval/E_msu.cpp)
add_executable(F_msu olympiads/msu-kval/F_msu.cpp)